--- a/src/ComicBookStore/Views/Home/Index.cshtml
+++ b/src/ComicBookStore/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <base href="/" />
 </head>
 <body >
-    <div>
+    <div id="wrapper">
         
        <header class="flex-col flex-stretch ">
            <div>
@@ -24,9 +24,10 @@
         <ui-view></ui-view>
 
         <footer>
-            <hr />
-            This is the footer!
-            <hr />
+            <p>
+                This is the footer!
+            </p>
+            
         </footer>
 
     </div>
